remove redundant webhook url argument

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <p>Set webhook URL:</p>
     <input type="text" id="webhook_input">
     <button id="webhook_save_button">Save</button>
+    <hr>
+    <button id="save_file_button">Create File</button>
   </body>
 </html>
