ability to add files to directories

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <input type="text" id="webhook_input">
     <button id="webhook_save_button">Save</button>
     <hr>
-    <button id="save_file_button">Create File</button>
+    <button id="create_file_button">Create File</button>
+    <button id="create_dir_button">Create Dir</button>
   </body>
 </html>
