update main page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <hr>
     <button id="create_file_button">Create File</button>
     <button id="create_dir_button">Create Dir</button>
+    <hr>
+    <button id="main_button">Main</button>
   </body>
 </html>
